# sake

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: init.rs  main.rs
cli/templates/: config.template.jinja2  config.tmpl  dotenv.tmpl  env.template.jinja2  project.json
json/: config.json  config.schema.json  test.config.json
release/development_behavior_packs/Sake_Tests_BP/: manifest.json
src/: actions.rs  adb.rs  config.rs  context.rs  fs.rs  lib.rs  main.rs  platform.rs  windows.rs
tests/: config.json
