[package]
name = "sake"
description = "the next-gen addon-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
colog = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
fs_extra = "1.3.0"
uuid = { version = "1.16.0", features = ["v4"] }
subprocess = "0.2.9"
adb_client = "2.1.13"