[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sake = { path = "../" }
log = "0.4.27"
colog = "1.3.0"
clap = { version = "4.0", features = ["derive"] }
askama = "0.13.0"
tokio = { version = "1.44.2", features = ["fs"] }
reqwest = { version = "0.12.15", features = ["stream"] }