[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sake = { path = "../" }
log = "0.4.27"
colog = "1.3.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["fs", "rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.15", features = ["stream"] }
futures-util = "0.3.31"
tera = "1.20.0"
lazy_static = "1.5.0"